--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -93,6 +93,11 @@ iframe {
 
 /* HOME
 ------------------------------- */
+#register {
+    background-image: url(../images/main-bg.jpg);
+    min-height: 100vh;
+
+}
 #home {
     background-image: url(../images/main-bg.jpg);
     min-height: 100vh;
